objects/Cosmetovigilance_Form__c.object
<CustomObject>
    <fields>
        <fullName>Apparition_delay__c</fullName>
        <label>Apparition delay unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>x Hours</fullName>
                </value>
                <value>
                    <fullName>x Days</fullName>
                </value>
                <value>
                    <fullName>x weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_site__c</fullName>
        <label>Application site</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Armpit</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Cheeks</fullName>
                </value>
                <value>
                    <fullName>Chest</fullName>
                </value>
                <value>
                    <fullName>Chin</fullName>
                </value>
                <value>
                    <fullName>Ears</fullName>
                </value>
                <value>
                    <fullName>Eye</fullName>
                </value>
                <value>
                    <fullName>Eyebrows</fullName>
                </value>
                <value>
                    <fullName>Eye contour</fullName>
                </value>
                <value>
                    <fullName>Eyelashes</fullName>
                </value>
                <value>
                    <fullName>Eyelids</fullName>
                </value>
                <value>
                    <fullName>Face</fullName>
                </value>
                <value>
                    <fullName>Foot</fullName>
                </value>
                <value>
                    <fullName>Forehead</fullName>
                </value>
                <value>
                    <fullName>Hair</fullName>
                </value>
                <value>
                    <fullName>Jaw</fullName>
                </value>
                <value>
                    <fullName>Lip contour</fullName>
                </value>
                <value>
                    <fullName>Lips</fullName>
                </value>
                <value>
                    <fullName>Nail</fullName>
                </value>
                <value>
                    <fullName>Neck</fullName>
                </value>
                <value>
                    <fullName>Nose</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Symptoms__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Reporter__c</fullName>
        <label>Country Reporter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>See_a_pharmacist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>See a pharmacist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seriousness_Type__c</fullName>
        <label>Seriousness Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary or permanent functional incapacity</fullName>
                </value>
                <value>
                    <fullName>Hospitalization</fullName>
                </value>
                <value>
                    <fullName>Congenital anomaly</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Immediate vital risk</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                    <isActive>false</isActive>
                    <label>N.A</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom_duration__c</fullName>
        <label>Symptom Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Assessment_1__c</fullName>
        <label>Case assessment 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_assessment_2__c</fullName>
        <formula>IF(  isPurged__c,Case_Assessment_1__c,Case_assessment__c)


/* IF( Case_assessment__c&lt;&gt;NULL &amp;&amp;Case_Assessment_1__c =NULL,Case_assessment__c ,(SUBSTITUTE( Case_assessment__c,  Case_assessment__c,Case_Assessment_1__c )  )
)*/</formula>
        <label>Case assessment 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_Reporter__c</fullName>
        <label>Province Reporter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Reporter__c</fullName>
        <label>Zip Code Reporter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countryofincidence__c</fullName>
        <label>Country of occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declared_Pregnancy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fill this field only if the customer mention it.</inlineHelpText>
        <label>Declared Pregnancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_contact_date__c</fullName>
        <label>1st contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_Quantity__c</fullName>
        <label>Frequency of use - Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_treatment__c</fullName>
        <label>Hospital treatment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recovery_situation__c</fullName>
        <inlineHelpText>After stop of application</inlineHelpText>
        <label>Recovery situation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partially</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporter_Last_Name__c</fullName>
        <label>Last name Reporter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_To_Mulesoft__c</fullName>
        <formula>!ISPICKVAL(To_be_sent_to_Ennov__c,&quot;&quot;) &amp;&amp; ISBLANK(Submited_Date_To_Mulesoft__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit To Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_contact_Date__c</fullName>
        <label>3rd contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_document__c</fullName>
        <label>Additional document</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prescription</fullName>
                </value>
                <value>
                    <fullName>Sick leave note</fullName>
                </value>
                <value>
                    <fullName>Hospitalization report</fullName>
                </value>
                <value>
                    <fullName>Other medical document</fullName>
                </value>
                <value>
                    <fullName>Photos of reaction</fullName>
                </value>
                <value>
                    <fullName>Photos of product</fullName>
                </value>
                <value>
                    <fullName>Photos</fullName>
                    <isActive>false</isActive>
                    <label>Photos</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_State_Reporter__c</fullName>
        <label>City/State Reporter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Re_Exposure__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_if_refusal__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comments if refusal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Occupation_Reporter__c</fullName>
        <label>Occupation Reporter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer association</fullName>
                </value>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Journalist</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                    <isActive>false</isActive>
                    <label>Influencer</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporter_First_name__c</fullName>
        <label>First name Reporter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_contact_Date__c</fullName>
        <label>2nd contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_be_sent_to_Ennov__c</fullName>
        <inlineHelpText>once this field we be filled in you won’t be able to modify its value</inlineHelpText>
        <label>to be sent to SafetyBook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Without vigilance partner follow up and anonymisation</fullName>
                </value>
                <value>
                    <fullName>With vigilance partner  follow up</fullName>
                </value>
                <value>
                    <fullName>With vigilance partner follow up and anonymisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causality_assessment__c</fullName>
        <label>Causality assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Not clearly attributable</fullName>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Sun_exposure__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_on_treatment__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment on treatment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_of_incidence__c</fullName>
        <formula>TEXT(Case__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of incidence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormScreenFlowFilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FormScreenFlowFilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_receipt_date__c</fullName>
        <inlineHelpText>Date of distributor/affiliate be aware of the event</inlineHelpText>
        <label>Initial receipt date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_history_type__c</fullName>
        <label>Medical history type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en attente de validation</fullName>
                </value>
                <value>
                    <fullName>Test1</fullName>
                </value>
                <value>
                    <fullName>Test2</fullName>
                </value>
                <value>
                    <fullName>Test3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_name_Reporter__c</fullName>
        <label>Middle name Reporter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vigilance_partner_ID__c</fullName>
        <externalId>true</externalId>
        <label>Vigilance partner ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_application_date__c</fullName>
        <label>Last application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_phone_Reporter__c</fullName>
        <label>Mobile/phone Reporter</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_implication_1__c</fullName>
        <label>Product implication 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspected</fullName>
                </value>
                <value>
                    <fullName>Concomitant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_implication_2__c</fullName>
        <label>Product implication 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspected</fullName>
                </value>
                <value>
                    <fullName>Concomitant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_implication_3__c</fullName>
        <label>Product implication 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspected</fullName>
                </value>
                <value>
                    <fullName>Concomitant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_with_a_status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Product with a regulatory status when the product has a regulatory status (ex: OTC, DIN, Cosmeceutical,…)</inlineHelpText>
        <label>Product with a status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_Frequency_Unit__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_Hospital_Visit__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_Skin_Condition__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_on_seriousness__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_application_date__c</fullName>
        <label>First application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_date_by_Maison__c</fullName>
        <inlineHelpText>Date of Maison be aware of the event</inlineHelpText>
        <label>Receipt date by Maison</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apparition_delay_number__c</fullName>
        <label>Apparition delay number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_Self_medication__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>See_health_professional__c</fullName>
        <label>See a health professional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>General practitioner</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serious_adverse_event_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serious adverse event confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Symptom_duration_number__c</fullName>
        <label>Symptom duration number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_Application_Site__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inci_list_Product_notice__c</fullName>
        <label>Inci list &amp; Product notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporter_is_the_consumer__c</fullName>
        <label>Reporter is the consumer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_causality_assessment__c</fullName>
        <label>Date causality assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Professional_product_used__c</fullName>
        <label>Professional use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>See_a_health_professional__c</fullName>
        <label>Type of Health Profesionnal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>General practitioner</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submited_Date_To_Mulesoft__c</fullName>
        <label>Submited Date To Mulesoft</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment_Type_Of_Health_Pro__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resubmit_To_Mulesoft_Count__c</fullName>
        <label>Resubmit To Mulesoft Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apparition_Delay_Precisions__c</fullName>
        <label>Apparition Delay Precisions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Allergic_Background__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name_Cosmetovigilance__c</fullName>
        <formula>Case__r.Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conclusion_vigilance_Partner__c</fullName>
        <label>Conclusion vigilance Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Symptoms_Duration_Precisions__c</fullName>
        <label>Symptoms Duration Precisions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_on_hospital_treatment__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment on hospital treatment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GDPR_oral_communication_given__c</fullName>
        <label>GDPR oral communication given</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Professional_Consulted__c</fullName>
        <label>Health Professional Consulted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_date_status_modification__c</fullName>
        <label>Last date status modification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Resubmit_Date_To_Mulesoft__c</fullName>
        <label>Last Resubmit Date To Mulesoft</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relationship_with_the_end_user__c</fullName>
        <label>Relationship with the end user</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health professional</fullName>
                </value>
                <value>
                    <fullName>Family member</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Health_Professional__c</fullName>
        <inlineHelpText>Health professional &amp; Treatment</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_customer_contact_by_phone__c</fullName>
        <label>1st customer contact by phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sun_exposure_or_tanning_session__c</fullName>
        <label>Sun exposure or tanning session</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_customer_contact_by_phone__c</fullName>
        <inlineHelpText>If the client doesn’t respond, wait a little longer before to close the case and send it to Ennov</inlineHelpText>
        <label>3rd customer contact by phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cosmetovigilance_form_acceptance__c</fullName>
        <inlineHelpText>If the client doesn’t come back to you after the deadline, wait a little longer before to close the case and send it to Ennov</inlineHelpText>
        <label>Cosmetovigilance form acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Form acceptance on hold customer’s decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_customer_contact_by_phone__c</fullName>
        <label>2nd customer contact by phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_See_a_health_professional__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Concomitent_product_used__c</fullName>
        <label>Competitor Concomitant product used</label>
        <type>TextArea</type>
    </fields>
</CustomObject>